@@ -1,6 +1,6 @@
 .ig
 Copyright (C) 2002-10 Bruce Allen
-Copyright (C) 2004-15 Christian Franke
+Copyright (C) 2004-16 Christian Franke
 
 $Id$
 
@@ -377,6 +377,12 @@ this option are:
 .I scsiioctl
 \- report only ioctl() transactions with SCSI devices.
 
+.\" %IF OS Linux
+.I nvmeioctl
+\- [Linux only] [NEW EXPERIMENTAL SMARTD FEATURE]
+report only ioctl() transactions with NVMe devices.
+
+.\" %ENDIF OS Linux
 Any argument may include a positive integer to specify the level of
 detail that should be reported.  The argument should be followed by a
 comma then the integer with no spaces.  For example, \fIataioctl,2\fP
