@@ -1,6 +1,6 @@
 .ig
 Copyright (C) 2002-10 Bruce Allen
-Copyright (C) 2004-15 Christian Franke
+Copyright (C) 2004-16 Christian Franke
 
 $Id$
 
@@ -322,6 +322,18 @@ from issuing SCSI commands to an ATA device.
 \fBsmartd\fP
 from issuing ATA commands to a SCSI device.
 
+.\" %ENDIF NOT OS Darwin
+.\" %IF OS Linux
+.I nvme[,NSID]
+\- [Linux only] [NEW EXPERIMENTAL SMARTD FEATURE]
+the device type is NVM Express (NVMe).
+The optional parameter NSID specifies the namespace id (in hex) passed
+to the driver.
+Use 0xffffffff for the broadcast namespace id.
+The default for NSID is the namespace id addressed by the device name.
+
+.\" %ENDIF OS Linux
+.\" %IF NOT OS Darwin
 .I sat[,auto][,N]
 \- the device type is SCSI to ATA Translation (SAT).
 This is for ATA disks that have a SCSI to ATA Translation (SAT) Layer
@@ -566,7 +578,7 @@ Directive are \fIon\fP and \fIoff\fP.  Also affects SCSI devices.
 [Please see the \fBsmartctl \-S\fP command-line option.]
 .TP
 .B \-H
-[ATA only] Check the health status of the disk with the SMART RETURN
+[ATA] Check the health status of the disk with the SMART RETURN
 STATUS command.
 If this command reports a failing health status, then disk
 failure is predicted in less than 24 hours, and a message at loglevel
@@ -574,23 +586,43 @@ failure is predicted in less than 24 hours, and a message at loglevel
 will be logged to syslog.  [Please see the
 .B smartctl \-H
 command-line option.]
+.\" %IF OS Linux
+
+[NVMe] [Linux only] [NEW EXPERIMENTAL SMARTD FEATURE]
+Checks the "Critical Warning" byte from the SMART/Health Information log.
+If any warning bit is set, a message at loglevel \fB\'LOG_CRIT\'\fP
+will be logged to syslog.
+.\" %ENDIF OS Linux
 .TP
 .B \-l TYPE
 Reports increases in the number of errors in one of three SMART logs.  The
 valid arguments to this Directive are:
 
 .I error
-\- [ATA only] report if the number of ATA errors reported in the Summary SMART
+\- [ATA] report if the number of ATA errors reported in the Summary SMART
 error log has increased since the last check.
 
+.\" %IF OS Linux
+.I error
+\- [NVMe] [Linux only] [NEW EXPERIMENTAL SMARTD FEATURE]
+report if the "Number of Error Information Log Entries" from the
+SMART/Health Information log has increased since the last check.
+
+.\" %ENDIF OS Linux
 .I xerror
-\- [ATA only] report if the number of ATA errors reported in the Extended
+\- [ATA] report if the number of ATA errors reported in the Extended
 Comprehensive SMART error log has increased since the last check.
 
 If both \'\-l error\' and \'\-l xerror\' are specified, smartd checks
 the maximum of both values.
 
 [Please see the \fBsmartctl \-l xerror\fP command-line option.]
+
+.\" %IF OS Linux
+.I xerror
+\- [NVMe] [Linux only] [NEW EXPERIMENTAL SMARTD FEATURE]
+same as \'-l error\'.
+.\" %ENDIF OS Linux
 
 .I selftest
 \- report if the number of failed tests reported in the SMART
@@ -1326,6 +1358,11 @@ To combine all of the above reports, use:
 For ATA devices, smartd interprets Attribute 194 or 190 as Temperature Celsius
 by default. This can be changed to Attribute 9 or 220 by the drive
 database or by the \'\-v 9,temp\' or \'\-v 220,temp\' directive.
+.\" %IF OS Linux
+
+For NVMe devices, smartd checks the maximum of the Composite Temperature value
+and all Temperature Sensor values reported by SMART/Health Information log.
+.\" %ENDIF OS Linux
 .TP
 .B \-F TYPE
 [ATA only] Modifies the behavior of \fBsmartd\fP to compensate for some
