@@ -78,6 +78,7 @@ typedef int pid_t;
 #include "dev_interface.h"
 #include "knowndrives.h"
 #include "scsicmds.h"
+#include "nvmecmds.h"
 #include "utility.h"
 
 // This is for solaris, where signal() resets the handler to SIG_DFL
@@ -104,6 +105,8 @@ typedef int pid_t;
 
 const char * smartd_cpp_cvsid = "$Id$"
   CONFIG_H_CVSID;
+
+using namespace smartmontools;
 
 // smartd exit codes
 #define EXIT_BADCMD    1   // command line did not parse
@@ -397,6 +400,9 @@ struct persistent_dev_state
   };
   scsi_nonmedium_error_t scsi_nonmedium_error;
 
+  // NVMe only
+  uint64_t nvme_err_log_entries;
+
   persistent_dev_state();
 };
 
@@ -407,7 +413,8 @@ persistent_dev_state::persistent_dev_state()
   scheduled_test_next_check(0),
   selective_test_last_start(0),
   selective_test_last_end(0),
-  ataerrorcount(0)
+  ataerrorcount(0),
+  nvme_err_log_entries(0)
 {
 }
 
@@ -564,12 +571,13 @@ static bool parse_dev_state_line(const char * line, persistent_dev_state & state
        "|(resvd)" // (23)
        ")" // 18)
       ")" // 16)
+     "|(nvme-err-log-entries)" // (24)
      ")" // 1)
-     " *= *([0-9]+)[ \n]*$", // (24)
+     " *= *([0-9]+)[ \n]*$", // (25)
     REG_EXTENDED
   );
 
-  const int nmatch = 1+24;
+  const int nmatch = 1+25;
   regmatch_t match[nmatch];
   if (!regex.execute(line, nmatch, match))
     return false;
@@ -627,6 +635,8 @@ static bool parse_dev_state_line(const char * line, persistent_dev_state & state
     else
       return false;
   }
+  else if (match[m+=7].rm_so >= 0)
+    state.nvme_err_log_entries = val;
   else
     return false;
   return true;
@@ -731,6 +741,9 @@ static bool write_dev_state(const char * path, const persistent_dev_state & stat
     write_dev_state_line(f, "ata-smart-attribute", i, "raw", pa.raw);
     write_dev_state_line(f, "ata-smart-attribute", i, "resvd", pa.resvd);
   }
+
+  // NVMe only
+  write_dev_state_line(f, "nvme-err-log-entries", state.nvme_err_log_entries);
 
   return true;
 }
@@ -1468,7 +1481,7 @@ static const char *GetValidArgList(char opt)
   case 'q':
     return "nodev, errors, nodevstartup, never, onecheck, showtests";
   case 'r':
-    return "ioctl[,N], ataioctl[,N], scsiioctl[,N]";
+    return "ioctl[,N], ataioctl[,N], scsiioctl[,N], nvmeioctl[,N]";
   case 'B':
   case 'p':
   case 'w':
@@ -1702,7 +1715,7 @@ static bool check_pending_id(const dev_config & cfg, const dev_state & state,
   return true;
 }
 
-// Called by ATA/SCSIDeviceScan() after successful device check
+// Called by ATA/SCSI/NVMeDeviceScan() after successful device check
 static void finish_device_scan(dev_config & cfg, dev_state & state)
 {
   // Set cfg.emailfreq if user hasn't set it
@@ -2396,6 +2409,119 @@ static int SCSIDeviceScan(dev_config & cfg, dev_state & state, scsi_device * scs
     }
     if (!attrlog_path_prefix.empty())
       cfg.attrlog_file = strprintf("%s%s-%s-%s.scsi.csv", attrlog_path_prefix.c_str(), vendor, model, serial);
+  }
+
+  finish_device_scan(cfg, state);
+
+  return 0;
+}
+
+// Convert 128 bit LE integer to uint64_t or its max value on overflow.
+static uint64_t le128_to_uint64(const unsigned char (& val)[16])
+{
+  for (int i = 8; i < 16; i++) {
+    if (val[i])
+      return ~(uint64_t)0;
+  }
+  uint64_t lo = val[7];
+  for (int i = 7-1; i >= 0; i--) {
+    lo <<= 8; lo += val[i];
+  }
+  return lo;
+}
+
+// Get max temperature in Kelvin reported in NVMe SMART/Health log.
+static int nvme_get_max_temp_kelvin(const nvme_smart_log & smart_log)
+{
+  int k = (smart_log.temperature[1] << 8) | smart_log.temperature[0];
+  for (int i = 0; i < 8; i++) {
+    if (smart_log.temp_sensor[i] > k)
+      k = smart_log.temp_sensor[i];
+  }
+  return k;
+}
+
+static int NVMeDeviceScan(dev_config & cfg, dev_state & state, nvme_device * nvmedev)
+{
+  const char *name = cfg.name.c_str();
+
+  // Device must be open
+
+  // Get ID Controller
+  nvme_id_ctrl id_ctrl;
+  if (!nvme_read_id_ctrl(nvmedev, id_ctrl)) {
+    PrintOut(LOG_INFO, "Device: %s, NVMe Identify Controller failed\n", name);
+    CloseDevice(nvmedev, name);
+    return 2;
+  }
+
+  // Get drive identity
+  char model[40+1], serial[20+1], firmware[8+1];
+  format_char_array(model, id_ctrl.mn);
+  format_char_array(serial, id_ctrl.sn);
+  format_char_array(firmware, id_ctrl.fr);
+
+  // Format device id string for warning emails
+  char nsstr[32] = "", capstr[32] = "";
+  unsigned nsid = nvmedev->get_nsid();
+  if (nsid != 0xffffffff)
+    snprintf(nsstr, sizeof(nsstr), ", NSID:%u", nsid);
+  uint64_t capacity = le128_to_uint64(id_ctrl.tnvmcap);
+  if (capacity)
+    format_capacity(capstr, sizeof(capstr), capacity, ".");
+  cfg.dev_idinfo = strprintf("%s, S/N:%s, FW:%s%s%s%s", model, serial, firmware,
+                             nsstr, (capstr[0] ? ", " : ""), capstr);
+
+  PrintOut(LOG_INFO, "Device: %s, %s\n", name, cfg.dev_idinfo.c_str());
+
+  // Read SMART/Health log
+  nvme_smart_log smart_log;
+  if (!nvme_read_smart_log(nvmedev, smart_log)) {
+    PrintOut(LOG_INFO, "Device: %s, failed to read NVMe SMART/Health Information\n", name);
+    CloseDevice(nvmedev, name);
+    return 2;
+  }
+
+  // Check temperature sensor support
+  if (cfg.tempdiff || cfg.tempinfo || cfg.tempcrit) {
+    if (!nvme_get_max_temp_kelvin(smart_log)) {
+      PrintOut(LOG_INFO, "Device: %s, no Temperature sensors, ignoring -W %d,%d,%d\n",
+               name, cfg.tempdiff, cfg.tempinfo, cfg.tempcrit);
+      cfg.tempdiff = cfg.tempinfo = cfg.tempcrit = 0;
+    }
+  }
+
+  // Init total error count
+  if (cfg.errorlog || cfg.xerrorlog) {
+    state.nvme_err_log_entries = le128_to_uint64(smart_log.num_err_log_entries);
+  }
+
+  // If no supported tests selected, return
+  if (!(   cfg.smartcheck || cfg.errorlog || cfg.xerrorlog
+        || cfg.tempdiff   || cfg.tempinfo || cfg.tempcrit )) {
+    CloseDevice(nvmedev, name);
+    return 3;
+  }
+
+  // Tell user we are registering device
+  PrintOut(LOG_INFO,"Device: %s, is SMART capable. Adding to \"monitor\" list.\n", name);
+
+  // Make sure that init_standby_check() ignores NVMe devices
+  cfg.offlinests_ns = cfg.selfteststs_ns = false;
+
+  CloseDevice(nvmedev, name);
+
+  if (!state_path_prefix.empty()) {
+    // Build file name for state file
+    std::replace_if(model, model+strlen(model), not_allowed_in_filename, '_');
+    std::replace_if(serial, serial+strlen(serial), not_allowed_in_filename, '_');
+    nsstr[0] = 0;
+    if (nsid != 0xffffffff)
+      snprintf(nsstr, sizeof(nsstr), "-n%u", nsid);
+    cfg.state_file = strprintf("%s%s-%s%s.nvme.state", state_path_prefix.c_str(), model, serial, nsstr);
+    // Read previous state
+    if (read_dev_state(cfg.state_file.c_str(), state))
+      PrintOut(LOG_INFO, "Device: %s, state read from %s\n", name, cfg.state_file.c_str());
   }
 
   finish_device_scan(cfg, state);
@@ -3308,6 +3434,89 @@ static int SCSICheckDevice(const dev_config & cfg, dev_state & state, scsi_devic
     return 0;
 }
 
+static int NVMeCheckDevice(const dev_config & cfg, dev_state & state, nvme_device * nvmedev)
+{
+  const char * name = cfg.name.c_str();
+
+  // TODO: Use common open function for ATA/SCSI/NVMe
+  // If user has asked, test the email warning system
+  if (cfg.emailtest)
+    MailWarning(cfg, state, 0, "TEST EMAIL from smartd for device: %s", name);
+
+  if (!nvmedev->open()) {
+    PrintOut(LOG_INFO, "Device: %s, open() failed: %s\n", name, nvmedev->get_errmsg());
+    MailWarning(cfg, state, 9, "Device: %s, unable to open device", name);
+    return 1;
+  }
+  if (debugmode)
+    PrintOut(LOG_INFO,"Device: %s, opened NVMe device\n", name);
+  reset_warning_mail(cfg, state, 9, "open device worked again");
+
+  // Read SMART/Health log
+  nvme_smart_log smart_log;
+  if (!nvme_read_smart_log(nvmedev, smart_log)) {
+      PrintOut(LOG_INFO, "Device: %s, failed to read NVMe SMART/Health Information\n", name);
+      MailWarning(cfg, state, 6, "Device: %s, failed to read NVMe SMART/Health Information", name);
+      state.must_write = true;
+      return 0;
+  }
+
+  // Check Critical Warning bits
+  if (cfg.smartcheck && smart_log.critical_warning) {
+    unsigned char w = smart_log.critical_warning;
+    std::string msg;
+    static const char * const wnames[] =
+      {"LowSpare", "Temperature", "Reliability", "R/O", "VolMemBackup"};
+
+    for (unsigned b = 0, cnt = 0; b < 8 ; b++) {
+      if (!(w & (1 << b)))
+        continue;
+      if (cnt)
+        msg += ", ";
+      if (++cnt > 3) {
+        msg += "..."; break;
+      }
+      if (b >= sizeof(wnames)/sizeof(wnames[0])) {
+        msg += "*Unknown*"; break;
+      }
+      msg += wnames[b];
+    }
+
+    PrintOut(LOG_CRIT, "Device: %s, Critical Warning (0x%02x): %s\n", name, w, msg.c_str());
+    MailWarning(cfg, state, 1, "Device: %s, Critical Warning (0x%02x): %s", name, w, msg.c_str());
+    state.must_write = true;
+  }
+
+  // Check temperature limits
+  if (cfg.tempdiff || cfg.tempinfo || cfg.tempcrit) {
+    int k = nvme_get_max_temp_kelvin(smart_log);
+    // Convert Kelvin to positive Celsius (TODO: Allow negative temperatures)
+    int c = k - 273;
+    if (c < 1)
+      c = 1;
+    else if (c > 0xff)
+      c = 0xff;
+    CheckTemperature(cfg, state, c, 0);
+  }
+
+  // Check if number of errors has increased
+  if (cfg.errorlog || cfg.xerrorlog) {
+    uint64_t oldcnt = state.nvme_err_log_entries;
+    uint64_t newcnt = le128_to_uint64(smart_log.num_err_log_entries);
+    if (newcnt > oldcnt) {
+      PrintOut(LOG_CRIT, "Device: %s, number of Error Log entries increased from %" PRIu64 " to %" PRIu64 "\n",
+               name, oldcnt, newcnt);
+      MailWarning(cfg, state, 4, "Device: %s, number of Error Log entries increased from %" PRIu64 " to %" PRIu64,
+                  name, oldcnt, newcnt);
+      state.must_write = true;
+    }
+    state.nvme_err_log_entries = newcnt;
+  }
+
+  CloseDevice(nvmedev, name);
+  return 0;
+}
+
 // 0=not used, 1=not disabled, 2=disable rejected by OS, 3=disabled
 static int standby_disable_state = 0;
 
@@ -3398,6 +3607,8 @@ static void CheckDevicesOnce(const dev_config_vector & configs, dev_state_vector
       ATACheckDevice(cfg, state, dev->to_ata(), firstpass, allow_selftests);
     else if (dev->is_scsi())
       SCSICheckDevice(cfg, state, dev->to_scsi(), allow_selftests);
+    else if (dev->is_nvme())
+      NVMeCheckDevice(cfg, state, dev->to_nvme());
   }
 
   do_disable_standby_check(configs, states);
@@ -4551,11 +4762,13 @@ static void ParseOpts(int argc, char **argv)
           PrintOut(LOG_CRIT, "======> LEVEL MUST BE INTEGER BETWEEN 1 AND 3<=======\n");
           EXIT(EXIT_BADCMD);
         } else if (!strcmp(s,"ioctl")) {
-          ata_debugmode = scsi_debugmode = i;
+          ata_debugmode = scsi_debugmode = nvme_debugmode = i;
         } else if (!strcmp(s,"ataioctl")) {
           ata_debugmode = i;
         } else if (!strcmp(s,"scsiioctl")) {
           scsi_debugmode = i;
+        } else if (!strcmp(s,"nvmeioctl")) {
+          nvme_debugmode = i;
         } else {
           badarg = true;
         }
@@ -4934,8 +5147,15 @@ static void RegisterDevices(const dev_config_vector & conf_entries, smart_device
         dev.reset();
       }
     }
+    // or register NVMe devices
+    else if (dev->is_nvme()) {
+      if (NVMeDeviceScan(cfg, state, dev->to_nvme())) {
+        CanNotRegister(cfg.name.c_str(), "NVMe", cfg.lineno, scanning);
+        dev.reset();
+      }
+    }
     else {
-      PrintOut(LOG_INFO, "Device: %s, neither ATA nor SCSI device\n", cfg.name.c_str());
+      PrintOut(LOG_INFO, "Device: %s, neither ATA, SCSI nor NVMe device\n", cfg.name.c_str());
       dev.reset();
     }
 
@@ -5061,13 +5281,16 @@ static int main_worker(int argc, char **argv)
 
       // Log number of devices we are monitoring...
       if (devices.size() > 0 || quit==2 || (quit==1 && !firstpass)) {
-        int numata = 0;
+        int numata = 0, numscsi = 0;
         for (unsigned i = 0; i < devices.size(); i++) {
-          if (devices.at(i)->is_ata())
+          const smart_device * dev = devices.at(i);
+          if (dev->is_ata())
             numata++;
+          else if (dev->is_scsi())
+            numscsi++;
         }
-        PrintOut(LOG_INFO,"Monitoring %d ATA and %d SCSI devices\n",
-                 numata, devices.size() - numata);
+        PrintOut(LOG_INFO,"Monitoring %d ATA/SATA, %d SCSI/SAS and %d NVMe devices\n",
+                 numata, numscsi, (int)devices.size() - numata - numscsi);
       }
       else {
         PrintOut(LOG_INFO,"Unable to monitor any SMART enabled devices. Try debug (-d) option. Exiting...\n");
